<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.assertj</groupId>
    <artifactId>assertj-parent</artifactId>
    <version>3.27.6</version>
    <relativePath>../assertj-parent</relativePath>
  </parent>

  <artifactId>assertj-tests</artifactId>
  <packaging>pom</packaging>

  <name>AssertJ Tests</name>

  <modules>
    <module>assertj-integration-tests</module>
    <module>assertj-performance-tests</module>
  </modules>

  <properties>
    <java.version>21</java.version>
    <gpg.skip>true</gpg.skip>
    <maven.install.skip>true</maven.install.skip>
    <maven.deploy.skip>true</maven.deploy.skip>
    <!-- Dependency versions -->
    <mockito.version>5.14.2</mockito.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-test-only-dependencies</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <bannedDependencies>
                  <includes>
                    <include>*:*:*:jar:test</include>
                  </includes>
                  <excludes>
                    <exclude>*</exclude>
                  </excludes>
                </bannedDependencies>
                <dependencyConvergence />
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <skipIfEmpty>true</skipIfEmpty>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
